2002-12-03  Werner Koch  <wk@gnupg.org>

	* ber-decoder.c (cmp_tag): Handle ANY tag even when the classes
	don't match.  Test case arecertificates with a id-aa-encrypKeyPref.

2002-11-25  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_get_sigattr_oids): New.
	(build_signed_data_attributes): Store the content-type.
	* der-encoder.c (_ksba_der_store_oid): Handle TYPE_ANY.

2002-10-22  Werner Koch  <wk@gnupg.org>

	* asn1-parse.y (yyparse): Prefix with _ksba_asn1_.

	* asn1-func.c (_asn1_find_left): Made static.

	* dn.c (parse_rdn): Add a parse-only mode to determine the end os
	a part.
	(_ksba_dn_from_str): Parse the string in reversed order as
	specified by rfc2253.

2002-08-23  Werner Koch  <wk@gnupg.org>

	* ksba.m4: Removed unnecessary libs
	* ksba-config.in: Made --prefix work for --libs.
	* Makefile.am (EXTRA_DIST): Add ksba.m4

2002-08-21  Werner Koch  <wk@gnupg.org>

	* der-encoder.c (_ksba_der_copy_tree)
	* crl.c (ksba_crl_get_issuer)
	* cms.c (ksba_cms_get_issuer_serial)
	(ksba_cms_get_sig_val)
	(ksba_cms_get_enc_val) 
	* cert.c (ksba_cert_get_image)
	(ksba_cert_hash)
	(ksba_cert_get_serial)
	(ksba_cert_get_sig_val): Removed all debugging output for encoding
	errors.

2002-08-13  Werner Koch  <wk@gnupg.org>

	* ksba.m4: New.

2002-08-06  Werner Koch  <wk@gnupg.org>

	* cms.h (signer_info_s, sig_val_s): New.  Actually moved out of
	ksba_cms_s and made it pointers there.
	* cms.c (ksba_cms_release): Changed for new types of signer_info
	and sig_val.
	(ksba_cms_get_issuer_serial): Implemented index for signer_info.
	(ksba_cms_get_digest_algo): Ditto.
	(ksba_cms_get_message_digest): Ditto.
	(ksba_cms_get_sig_val): Ditto.
	(ksba_cms_hash_signed_attrs): Ditto.
	(build_signed_data_attributes): Build the list of signer_infos.
	(build_signed_data_rest): And process the list.
	(ksba_cms_set_sig_val): Append values.
	(build_signed_data_rest): Use the sig_val list.
	(ct_build_signed_data): Changed check for set sig_val.